# beetree-examples

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  README.md
helloworld/: .gitignore  CMakeLists.txt  README.md
helloworld/application/: CMakeLists.txt  tokens.json
helloworld/application/include/helloworld/: application.hpp  helloworld-api.hpp  helloworld-model.hpp  helloworld.tree  install.hpp
helloworld/application/registry/: helloworld-register-bank.json
helloworld/application/src/: application.cpp  helloworld-api.cpp  install.cpp
helloworld/application/targets/host/: CMakeLists.txt  main.cpp
helloworld/application/targets/stm32f030x8/: CMakeLists.txt  main.cpp
helloworld/cmake/: FetchNLohmannJSON.cmake
helloworld/platform/: CMakeLists.txt
helloworld/platform/include/helloworld-platform/: helloworld-platform.hpp
helloworld/platform/src/host/: CMakeLists.txt  internal-platform.cpp  internal-platform.hpp
helloworld/platform/src/stm32f030x8/: CMakeLists.txt  STM32F030R8Tx_FLASH.ld  boot.cpp  internal-platform.cpp  internal-platform.hpp  interrupt-handlers.cpp  startup_stm32f030x8.s
